# advent_of_code_2020

./: .gitmodules  Cargo.toml  readme.md
inputs/: test.txt
src/: common.rs  day_1.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_2.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  day_template.rs  main.rs
src/common/: chinese_remainder_theorem.rs  grid.rs  mod.rs  vec2.rs  vec3.rs  vec4.rs
